--- a/index.html
+++ b/index.html
@@ -10,9 +10,22 @@
 </head>
 <body>
 
+<div class="container">
+    <div class="row navbar">
+        <div>
+            <ul class="list-unstyled list-inline text-center">
+                <li>HOME</li>
+                <li>PORTFOLIO</li>
+                <li>ABOUT</li>
+                <li>CONTACT</li>
+            </ul>
+        </div>
+    </div>
+</div>
 
-<h1>Diane</h1>
-<h3>Rodriguez</h3>
+<h1>Hi Diane</h1>
+
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
