--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             </ul>
         </div>
     </div>
+
+    <div class="col-md-12 visible-sm">
+        only show in desktop
+    </div>
 </div>
 
 <h1>Hi Diane</h1>
