--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <div class="col-md-12 visible-sm">
+    <div class="col-md-12 hidden-xs">
         only show in desktop
     </div>
 </div>
