--- a/index.html
+++ b/index.html
@@ -7,28 +7,86 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="custom.css">
-    <title>Document</title>
+    <title>Calculator</title>
 </head>
 <body>
-
 <div class="container">
-    <div class="row navbar">
-        <div>
-            <ul class="list-unstyled list-inline text-center">
-                <li>HOME</li>
-                <li>PORTFOLIO</li>
-                <li>ABOUT</li>
-                <li>CONTACT</li>
-            </ul>
+    <h1 class="text-center">My Personal Calculator</h1>
+
+    <div class="row">
+        <div class="col-xs-5">
+            <input class="calc-inputs" type="text">
+        </div>
+        <div class="col-xs-2 no-padding">
+            <input class="calc-inputs" type="text">
+        </div>
+        <div class="col-xs-5">
+            <input class="calc-inputs" type="text">
         </div>
     </div>
 
-    <div class="col-md-12 hidden-xs">
-        only show in desktop
+    <div class="row">
+        <div class="col-xs-3">
+            <button class="rectangle">1</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">2</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">3</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">+</button>
+        </div>
     </div>
+
+    <div class="row">
+        <div class="col-xs-3">
+            <button class="rectangle">4</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">5</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">6</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">-</button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-3">
+            <button class="rectangle">7</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">8</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">9</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">*</button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-3">
+            <button class="rectangle">C</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">0</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">=</button>
+        </div>
+        <div class="col-xs-3">
+            <button class="rectangle">/</button>
+        </div>
+    </div>
+
 </div>
 
-<h1>Hi Diane</h1>
 
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -36,5 +94,3 @@
 </html>
 
 
-Hello World
-testing
