--- a/index.html
+++ b/index.html
@@ -10,24 +10,121 @@
     <title>Calculator</title>
 </head>
 <body>
+<form name="calculator">
+    <div class="container">
+        <h1 class="text-center">My Personal Calculator</h1>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <input class="calc-inputs" value="" type="text" name="display" placeholder="Your Solution" readonly>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="1" onclick="document.calculator.display.value+='1'">
+            </div>
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="2" onclick="document.calculator.display.value+='2'">
+            </div>
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="3" onclick="document.calculator.display.value+='3'">
+            </div>
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="+" onclick="document.calculator.display.value+='+'">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="4" onclick="document.calculator.display.value+='4'">
+            </div>
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="5" onclick="document.calculator.display.value+='5'">
+            </div>
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="6" onclick="document.calculator.display.value+='6'">
+            </div>
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="-" onclick="document.calculator.display.value+='-'">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="7" onclick="document.calculator.display.value+='7'">
+            </div>
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="8" onclick="document.calculator.display.value+='8'">
+            </div>
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="9" onclick="document.calculator.display.value+='9'">
+            </div>
+            <div class="col-xs-3">
+                <input type="button" class="rectangle" value="*" onclick="document.calculator.display.value+='*'">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-3">
+                <input class="rectangle" type="reset" value="C">
+            </div>
+            <div class="col-xs-3">
+                <input class="rectangle" type="button" value="0" onClick="document.calculator.display.value+='0'">
+            </div>
+            <div class="col-xs-3">
+                <input class="rectangle" type="button" value="=" onClick="document.calculator.display.value=eval(document.calculator.display.value)">
+            </div>
+            <div class="col-xs-3">
+                <input class="rectangle" type="button" value="/" onClick="document.calculator.display.value+='/'">
+            </div>
+        </div>
+        
+    </div>
+
+    <!--Solution is <input type="text" name="ans" value=""><br>-->
+    <!--<input class="square" type="button" value="1" onClick="document.calculator.ans.value+='1'">-->
+    <!--<input class="square" type="button" value="2" onClick="document.calculator.ans.value+='2'">-->
+    <!--<input class="square" type="button" value="3" onClick="document.calculator.ans.value+='3'">-->
+    <!--<input class="square" type="button" value="+" onClick="document.calculator.ans.value+='+'">-->
+
+    <!--<input type="button" value="4" onClick="document.calculator.ans.value+='4'">-->
+    <!--<input type="button" value="5" onClick="document.calculator.ans.value+='5'">-->
+    <!--<input type="button" value="6" onClick="document.calculator.ans.value+='6'">-->
+    <!--<input type="button" value="-" onClick="document.calculator.ans.value+='-'">-->
+
+    <!--<input type="button" value="7" onClick="document.calculator.ans.value+='7'">-->
+    <!--<input type="button" value="8" onClick="document.calculator.ans.value+='8'">-->
+    <!--<input type="button" value="9" onClick="document.calculator.ans.value+='9'">-->
+    <!--<input type="button" value="*" onClick="document.calculator.ans.value+='*'">-->
+    <!--<input type="button" value="/" onClick="document.calculator.ans.value+='/'">-->
+
+    <!--<input type="button" value="0" onClick="document.calculator.ans.value+='0'">-->
+    <!--<input type="reset" value="Reset">-->
+    <!--<input type="button" value="=" onClick="document.calculator.ans.value=eval(document.calculator.ans.value)">-->
+
+
+</form>
+
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</body>
+</html>
+
+
+<!--
 <div class="container">
     <h1 class="text-center">My Personal Calculator</h1>
-
+    <form name="calculator">
     <div class="row">
-        <div class="col-xs-5">
-            <input class="calc-inputs" type="text">
-        </div>
-        <div class="col-xs-2 no-padding">
-            <input class="calc-inputs" type="text">
-        </div>
-        <div class="col-xs-5">
-            <input class="calc-inputs" type="text">
+        <div class="col-xs-12">
+            <input class="calc-inputs" type="text" name = "display" id="display" readonly>
         </div>
     </div>
 
     <div class="row">
         <div class="col-xs-3">
-            <button class="rectangle">1</button>
+            <input type='button' name="one" class="rectangle" value="1" onclick=”calculator.display.value += ‘1’”>
         </div>
         <div class="col-xs-3">
             <button class="rectangle">2</button>
@@ -84,13 +181,8 @@
             <button class="rectangle">/</button>
         </div>
     </div>
-
+    </form>
 </div>
 
 
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</body>
-</html>
-
-
+-->
