--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 </head>
 <body>
 <form name="calculator">
-    <div class="container">
+    <div class="container-fluid">
         <h1 class="text-center">My Personal Calculator</h1>
 
         <div class="row">
             <div class="col-xs-12">
-                <input class="calc-inputs" value="" type="text" name="display" placeholder="Your Solution" readonly>
+                <input class="calc-inputs" value="" type="text" name="display" placeholder="Answer" readonly>
             </div>
         </div>
 
         <div class="row">
             <div class="col-xs-3">
-                <input type="button" class="rectangle" value="1" onclick="document.calculator.display.value+='1'">
+                <input type="button" class="rectangle onetonine" value="1" onclick="document.calculator.display.value+='1'">
             </div>
             <div class="col-xs-3">
-                <input type="button" class="rectangle" value="2" onclick="document.calculator.display.value+='2'">
+                <input type="button" class="rectangle onetonine" value="2" onclick="document.calculator.display.value+='2'">
             </div>
             <div class="col-xs-3">
-                <input type="button" class="rectangle" value="3" onclick="document.calculator.display.value+='3'">
+                <input type="button" class="rectangle onetonine" value="3" onclick="document.calculator.display.value+='3'">
             </div>
             <div class="col-xs-3">
                 <input type="button" class="rectangle" value="+" onclick="document.calculator.display.value+='+'">
@@ -37,13 +37,13 @@
 
         <div class="row">
             <div class="col-xs-3">
-                <input type="button" class="rectangle" value="4" onclick="document.calculator.display.value+='4'">
+                <input type="button" class="rectangle onetonine" value="4" onclick="document.calculator.display.value+='4'">
             </div>
             <div class="col-xs-3">
-                <input type="button" class="rectangle" value="5" onclick="document.calculator.display.value+='5'">
+                <input type="button" class="rectangle onetonine" value="5" onclick="document.calculator.display.value+='5'">
             </div>
             <div class="col-xs-3">
-                <input type="button" class="rectangle" value="6" onclick="document.calculator.display.value+='6'">
+                <input type="button" class="rectangle onetonine" value="6" onclick="document.calculator.display.value+='6'">
             </div>
             <div class="col-xs-3">
                 <input type="button" class="rectangle" value="-" onclick="document.calculator.display.value+='-'">
@@ -52,13 +52,13 @@
 
         <div class="row">
             <div class="col-xs-3">
-                <input type="button" class="rectangle" value="7" onclick="document.calculator.display.value+='7'">
+                <input type="button" class="rectangle onetonine" value="7" onclick="document.calculator.display.value+='7'">
             </div>
             <div class="col-xs-3">
-                <input type="button" class="rectangle" value="8" onclick="document.calculator.display.value+='8'">
+                <input type="button" class="rectangle onetonine" value="8" onclick="document.calculator.display.value+='8'">
             </div>
             <div class="col-xs-3">
-                <input type="button" class="rectangle" value="9" onclick="document.calculator.display.value+='9'">
+                <input type="button" class="rectangle onetonine" value="9" onclick="document.calculator.display.value+='9'">
             </div>
             <div class="col-xs-3">
                 <input type="button" class="rectangle" value="*" onclick="document.calculator.display.value+='*'">
@@ -66,11 +66,11 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-3">
-                <input class="rectangle" type="reset" value="C">
-            </div>
-            <div class="col-xs-3">
-                <input class="rectangle" type="button" value="0" onClick="document.calculator.display.value+='0'">
+            <!--<div class="col-xs-3">-->
+                <!--<input class="rectangle" type="reset" value="C">-->
+            <!--</div>-->
+            <div class="col-xs-6">
+                <input class="rectangle onetonine" type="button" value="0" onClick="document.calculator.display.value+='0'">
             </div>
             <div class="col-xs-3">
                 <input class="rectangle" type="button" value="=" onClick="document.calculator.display.value=eval(document.calculator.display.value)">
@@ -79,7 +79,7 @@
                 <input class="rectangle" type="button" value="/" onClick="document.calculator.display.value+='/'">
             </div>
         </div>
-        
+
     </div>
 
     <!--Solution is <input type="text" name="ans" value=""><br>-->
