--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="row">
             <div class="col-xs-3">
-                <input type="reset" class="rectangle" value="C">
+                <input type="reset" class="rectangle" value="C" onclick="resetall()">
             </div>
             <div class="col-xs-3">
                 <input type="button" class="rectangle" value="+/-">
