--- a/contactUs.html
+++ b/contactUs.html
@@ -27,8 +27,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-                    <li><a href="contactUs.html">Contact Us</a></li>
+                    <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="#">Contact Us</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -36,9 +36,7 @@
 
 
     <div id="displayPics">
-        <img id="currentPic" src="pics/rotatePics/starting.jpg" alt="">
-        <button class="w3-button w3-display-left">&#10094;</button>
-        <button class="w3-button w3-display-right">&#10095;</button>
+
     </div>
 </div>
 
